--- a/style.css
+++ b/style.css
@@ -270,8 +270,35 @@ header #direitaTopo ul li:before {
     width: 100%;
     margin-bottom: 5vh;
 }
-#sobre p{
+#sobre article{
+    display: flex;
+    flex-direction: column;
     width: 90%;
+    padding: 0 5%;
+    margin-top: 4vh;
+}
+#sobre article div{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 30%;
+    margin: auto;
+    /* background-color: #a5afc2; */
+}
+#sobre article #eu img{
+    width: 25%;
+    height: 25%;
+    border-radius: 20px;
+    box-shadow: 6px 6px 2px rgba(0, 0, 0, 0.788);;
+}
+#sobre article #eu p{
+    width: 65%;
+}
+
+#sobre p{
+    /* background-color: yellow; */
+    width:90%;
     margin: auto;
     color: #e0e0e0;
     line-height: 40px;
